[tool.poetry]
name = "resonance-mapper"
version = "0.1.0"
description = "Analyzes audio signals and categorizes them into predefined frequency ranges, providing valuable insights into the sonic makeup of the audio."
authors = ["Tanvir <tanvir.ahmed.tonoy@skiff.com>"]
license = "GPLv3"
readme = "readme.md"
packages = [{ include = "resonance_mapper" }]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
pyaudio = "^0.2.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
